<resources>
    <string name="app_name">android-junior</string>
    <string name="nav_drawer_main_screen">Strong główna</string>
    <string name="day_before_yesterday">Przedwczoraj</string>
    <string name="yesterday">Wczoraj</string>
    <string name="today">Dzisiaj</string>
    <string name="tomorrow">Jutro</string>
    <string name="day_after_tomorrow">Pojutrze</string>
    <string name="desc_logo">Logo</string>
    <string name="desc_item_menu">Item menu</string>


    <string name="program_tv">Program TV</string>
    <string name="channels">Kanały</string>
    <string name="favorite">Ulubione</string>
    <string name="notes">Nagrania</string>
    <string name="desc_tv_online">TV Online</string>
    <string name="desc_account_icon">Account Icon</string>

    <string name="all">Wszystkie</string>
    <string name="kids">Dzieci</string>
    <string name="education">Educacia</string>
    <string name="movies_and_series">Filmy i seriale</string>
    <string name="info">Informacja</string>
    <string name="music">Muzyka</string>
    <string name="general">Ogólne</string>
    <string name="sport">Sport</string>
    <string name="lifestyle">Styl życia</string>

    <string name="moje_konto">Moje konto</string>
    <string name="_123456">123456</string>








</resources>
